--- a/404.html
+++ b/404.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<!--  Last Published: Wed Oct 21 2020 04:34:26 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Oct 28 2020 06:01:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f7fc79e87f0f55e821081d7" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -14,8 +13,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link href="https://www.tryjraft.com/404" rel="canonical">
-  <!--  Google Tag Manager  -->
+  <link href="https://www.tryjraft.com/404" rel="canonical"><!--  Google Tag Manager  -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
