--- a/build.html
+++ b/build.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<!--  Last Published: Wed Oct 21 2020 04:34:26 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Oct 28 2020 06:01:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5f1c74825997427a54233a" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -21,8 +20,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link href="https://www.tryjraft.com/build" rel="canonical">
-  <!--  Google Tag Manager  -->
+  <link href="https://www.tryjraft.com/build" rel="canonical"><!--  Google Tag Manager  -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -32,7 +30,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body class="body features">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="/" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
+    <div class="nav-wrap">
+      <a href="index" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -40,15 +39,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Features</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="build" aria-current="page" class="dropdown-link w-dropdown-link w--current">Builder</a><a href="create" class="dropdown-link w-dropdown-link">Editor</a><a href="manage" class="dropdown-link w-dropdown-link">Workflow</a><a href="engage" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
+            <nav class="dropdown-list w-dropdown-list">
+              <a href="build" aria-current="page" class="dropdown-link w-dropdown-link w--current">Builder</a>
+              <a href="create" class="dropdown-link w-dropdown-link">Editor</a>
+              <a href="manage" class="dropdown-link w-dropdown-link">Workflow</a>
+              <a href="engage" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a>
+              <a href="hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a>
+            </nav>
           </div>
           <div data-hover="1" data-delay="0" class="w-dropdown">
             <div class="w-dropdown-toggle">
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Why Jraft</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="vs/wordpress" class="dropdown-link w-dropdown-link">Jraft vs WordPress</a><a href="vs/wix" class="dropdown-link w-dropdown-link">Jraft vs Wix, Squarespace</a><a href="vs/medium" class="dropdown-link w-dropdown-link">Jraft vs Medium</a><a href="vs/what-wordpress-really-costs-you" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a></nav>
-          </div><a href="pricing" class="nav-item w-nav-link">Pricing</a></nav>
+            <nav class="dropdown-list w-dropdown-list">
+              <a href="vs/wordpress" class="dropdown-link w-dropdown-link">Jraft vs WordPress</a>
+              <a href="vs/wix" class="dropdown-link w-dropdown-link">Jraft vs Wix, Squarespace</a>
+              <a href="vs/medium" class="dropdown-link w-dropdown-link">Jraft vs Medium</a>
+              <a href="vs/what-wordpress-really-costs-you" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a>
+            </nav>
+          </div>
+          <a href="pricing" class="nav-item w-nav-link">Pricing</a>
+        </nav>
       </div>
       <div class="div-block-1328">
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
@@ -84,7 +96,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="feature-hero-text-parent">
         <h1 class="build-horiz-text _1">&#x27;Normal&#x27; site builders are designed for <span class="emphasise title">e-commerce</span> as <span class="emphasise title">that&#x27;s where they think the money is.</span></h1>
         <div class="text-block-31"><strong class="bold-text-5">Jraft&#x27;s different.</strong> We don’t care about sales or promo codes. We don’t care about inventory or checkout. <span class="text-span-6">We care about stories.</span> And whether you’re The New York Times or a food blogger, Jraft lets you tell your story the way it was meant to be told.</div>
-        <div class="div-block-1372"><a href="#Footer-CTA" class="button square-blackbg w-button">Join Beta</a>
+        <div class="div-block-1372">
+          <a href="#Footer-CTA" class="button square-blackbg w-button">Join Beta</a>
           <div class="launching-soon">Launching Soon</div>
         </div>
       </div>
@@ -161,7 +174,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <div class="virtual-block _2"><img src="images/Virtual-Block-2.png" loading="lazy" width="374" sizes="(max-width: 767px) 100vw, (max-width: 991px) 38vw, 34vw" srcset="images/Virtual-Block-2-p-500.png 500w, images/Virtual-Block-2-p-800.png 800w, images/Virtual-Block-2-p-1080.png 1080w, images/Virtual-Block-2.png 1200w" alt="" class="bottom-block"></div>
           </div>
           <div class="virtual-block _3">
-            <div class="div-block-1406"><img src="images/3.png" loading="lazy" alt="" class="block-desk-dropdown _3"><img src="images/2.png" loading="lazy" alt="" class="block-desk-dropdown _2"><img src="images/1.png" loading="lazy" alt="" class="block-desk-dropdown _1"></div><img src="images/2_1.png" loading="lazy" width="383" sizes="(max-width: 767px) 100vw, (max-width: 991px) 38vw, 34vw" srcset="images/2_1-p-500.png 500w, images/2_1.png 800w" alt="" class="bg-block _2"><img src="images/1_1.png" loading="lazy" width="434" sizes="(max-width: 767px) 100vw, (max-width: 991px) 38vw, 34vw" srcset="images/1_1-p-500.png 500w, images/1_1.png 800w" alt="" class="bg-block _1"></div>
+            <div class="div-block-1406"><img src="images/3.png" loading="lazy" alt="" class="block-desk-dropdown _3"><img src="images/2.png" loading="lazy" alt="" class="block-desk-dropdown _2"><img src="images/1.png" loading="lazy" alt="" class="block-desk-dropdown _1"></div><img src="images/2_1.png" loading="lazy" width="383" sizes="(max-width: 767px) 100vw, (max-width: 991px) 38vw, 34vw" srcset="images/2_1-p-500.png 500w, images/2_1.png 800w" alt="" class="bg-block _2"><img src="images/1_1.png" loading="lazy" width="434" sizes="(max-width: 767px) 100vw, (max-width: 991px) 38vw, 34vw" srcset="images/1_1-p-500.png 500w, images/1_1.png 800w" alt="" class="bg-block _1">
+          </div>
           <div class="photo-bg-colour builder-2"></div>
         </div>
       </div>
@@ -297,14 +311,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="pre-footer-parent">
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a533f" class="hosting-pricing-parent">
         <div>
-          <h2 class="heading-12">The price of a WordPress plugin</h2>
+          <h2 class="heading-12">Half the price of a WordPress plugin</h2>
           <div class="cta-pricing-description">Build your publication for free and take as long as you need (no trial period, no credit card details required). Just add a plan for a custom domain and to add more users when you&#x27;re ready to start publishing.</div>
-        </div><a href="pricing" class="button square-corners left-align w-button">View pricing</a></div>
+        </div>
+        <a href="pricing" class="button square-corners left-align w-button">View pricing</a>
+        <link rel="prefetch" href="/pricing">
+      </div>
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent landing">
         <div class="footer-form-title-copy">Get access before everyone else. <span class="text-span-9"><br>Sign up to our beta</span></div>
         <div class="w-form">
           <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" action="https://tryjraft.us4.list-manage.com/subscribe/post?u=6b8b0d1bda6854f0753acc077&amp;amp;id=45ffacf339" method="post" class="footer-form">
-            <div class="form-name-parent"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First Name" id="FNAME" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last Name" id="LNAME" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email" id="EMAIL-2" required=""><input type="submit" value="Join Beta Waitlist" data-wait="Please wait..." class="footer-form-input-submit w-button"></form>
+            <div class="form-name-parent"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First Name" id="FNAME" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last Name" id="LNAME" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email" id="EMAIL-2" required=""><input type="submit" value="Join Beta Waitlist" data-wait="Please wait..." class="footer-form-input-submit w-button">
+          </form>
           <div class="success-message w-form-done">
             <div class="text-block-2">Thanks for believing in what we&#x27;re doing. You&#x27;ll be the first to know when we launch 🎉</div>
           </div>
@@ -318,37 +336,71 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <footer class="footer-section footer">
     <div class="footer-flex-container">
       <div class="div-block-1402">
-        <div class="footer-logo-contact-div"><a href="#" class="footer-logo-link w-inline-block"><img src="images/logo-white.svg" alt="Jraft&#x27;s Logo coloured white" class="footer-logo-image"></a>
+        <div class="footer-logo-contact-div">
+          <a href="#" class="footer-logo-link w-inline-block"><img src="images/logo-white.svg" alt="Jraft&#x27;s Logo coloured white" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
-          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="LinkedIn Logo" class="image-68"></a></div>
+          <div class="div-block-3">
+            <a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a>
+            <a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a>
+            <a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a>
+            <a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="LinkedIn Logo" class="image-68"></a>
+          </div>
         </div>
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="manage" class="footer-text">Workflow</a></li>
-            <li><a href="create" class="footer-text">Editor</a></li>
-            <li><a href="build" aria-current="page" class="footer-text w--current">Builder</a></li>
-            <li><a href="engage" class="footer-text">Engage &amp; Earn</a></li>
-            <li><a href="hosting" class="footer-text">Hosting &amp; Performance</a></li>
-            <li><a href="pricing" class="footer-text">Pricing</a></li>
+            <li>
+              <a href="manage" class="footer-text">Workflow</a>
+            </li>
+            <li>
+              <a href="create" class="footer-text">Editor</a>
+            </li>
+            <li>
+              <a href="build" aria-current="page" class="footer-text w--current">Builder</a>
+            </li>
+            <li>
+              <a href="engage" class="footer-text">Engage &amp; Earn</a>
+            </li>
+            <li>
+              <a href="hosting" class="footer-text">Hosting &amp; Performance</a>
+            </li>
+            <li>
+              <a href="pricing" class="footer-text">Pricing</a>
+            </li>
           </ul>
         </div>
         <div class="footer-div hidden">
           <h5 class="footer-list-heading">Resources</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="#" class="footer-text">About Us</a></li>
-            <li><a href="#" class="footer-text">Press</a></li>
-            <li><a href="#" class="footer-text">Partner Program</a></li>
-            <li><a href="#" class="footer-text">Cookie Policy</a></li>
+            <li>
+              <a href="#" class="footer-text">About Us</a>
+            </li>
+            <li>
+              <a href="#" class="footer-text">Press</a>
+            </li>
+            <li>
+              <a href="#" class="footer-text">Partner Program</a>
+            </li>
+            <li>
+              <a href="#" class="footer-text">Cookie Policy</a>
+            </li>
           </ul>
         </div>
         <div class="footer-div">
           <h5 class="footer-list-heading">Compare</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="vs/wordpress" class="footer-text">WordPress</a></li>
-            <li><a href="vs/wix" class="footer-text">Wix</a></li>
-            <li><a href="vs/medium" class="footer-text">Medium</a></li>
-            <li><a href="vs/wordpress" class="footer-text">WordPress: Hidden Costs</a></li>
+            <li>
+              <a href="vs/wordpress" class="footer-text">WordPress</a>
+            </li>
+            <li>
+              <a href="vs/wix" class="footer-text">Wix</a>
+            </li>
+            <li>
+              <a href="vs/medium" class="footer-text">Medium</a>
+            </li>
+            <li>
+              <a href="vs/wordpress" class="footer-text">WordPress: Hidden Costs</a>
+            </li>
           </ul>
         </div>
       </div>
