--- a/pricing.html
+++ b/pricing.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<!--  Last Published: Wed Oct 21 2020 04:34:26 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Oct 28 2020 06:01:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f5b4a29c2f589517b416b35" data-wf-site="5f475d95bc662b718071304a" lang="en">
 <head>
   <meta charset="utf-8">
@@ -19,8 +18,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <link href="https://www.tryjraft.com/pricing" rel="canonical">
-  <!--  Google Tag Manager  -->
+  <link href="https://www.tryjraft.com/pricing" rel="canonical"><!--  Google Tag Manager  -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
@@ -31,7 +29,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navigation w-nav">
-    <div class="nav-wrap"><a href="/" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
+    <div class="nav-wrap">
+      <a href="index" class="nav-logo-link w-nav-brand"><img src="images/logo-black.svg" width="108" alt="Jraft Logo" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -39,15 +38,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Features</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="build" class="dropdown-link w-dropdown-link">Builder</a><a href="create" class="dropdown-link w-dropdown-link">Editor</a><a href="manage" class="dropdown-link w-dropdown-link">Workflow</a><a href="engage" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a><a href="hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a></nav>
+            <nav class="dropdown-list w-dropdown-list">
+              <a href="build" class="dropdown-link w-dropdown-link">Builder</a>
+              <a href="create" class="dropdown-link w-dropdown-link">Editor</a>
+              <a href="manage" class="dropdown-link w-dropdown-link">Workflow</a>
+              <a href="engage" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a>
+              <a href="hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a>
+            </nav>
           </div>
           <div data-hover="1" data-delay="0" class="w-dropdown">
             <div class="w-dropdown-toggle">
               <div class="w-icon-dropdown-toggle"></div>
               <div class="nav-item">Why Jraft</div>
             </div>
-            <nav class="dropdown-list w-dropdown-list"><a href="vs/wordpress" class="dropdown-link w-dropdown-link">Jraft vs WordPress</a><a href="vs/wix" class="dropdown-link w-dropdown-link">Jraft vs Wix, Squarespace</a><a href="vs/medium" class="dropdown-link w-dropdown-link">Jraft vs Medium</a><a href="vs/what-wordpress-really-costs-you" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a></nav>
-          </div><a href="pricing" aria-current="page" class="nav-item w-nav-link w--current">Pricing</a></nav>
+            <nav class="dropdown-list w-dropdown-list">
+              <a href="vs/wordpress" class="dropdown-link w-dropdown-link">Jraft vs WordPress</a>
+              <a href="vs/wix" class="dropdown-link w-dropdown-link">Jraft vs Wix, Squarespace</a>
+              <a href="vs/medium" class="dropdown-link w-dropdown-link">Jraft vs Medium</a>
+              <a href="vs/what-wordpress-really-costs-you" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a>
+            </nav>
+          </div>
+          <a href="pricing" aria-current="page" class="nav-item w-nav-link w--current">Pricing</a>
+        </nav>
       </div>
       <div class="div-block-1328">
         <a href="#Footer-CTA" class="button transparentbg-black w-inline-block">
@@ -82,7 +94,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="pricing-table-title-parent">
       <h1 class="pricing-table-title">Dead simple pricing.</h1>
       <h3 class="pricing-table-subhead">Unlimited, Elite Performance Hosting.</h3>
-      <div class="pricing-table-description">Forget metered usage: unlike other hosts, Jraft charges by user, not by bandwidth.<span class="pricing-table-descript"> Half the price of a WordPress plugin, and </span><a href="vs/what-wordpress-really-costs-you" class="blog-link"><span class="pricing-table-descript">half the price of a comparable WordPress deployment</span></a><span class="pricing-table-descript"> with hosting that&#x27;s twice the performance of our nearest competitor.</span></div>
+      <div class="pricing-table-description">Forget metered usage: unlike other hosts, Jraft charges by users, not by bandwidth.<span class="pricing-table-descript"> Half the price of a WordPress plugin, and </span>
+        <a href="vs/what-wordpress-really-costs-you" class="blog-link"><span class="pricing-table-descript">5x cheaper than a comparable WordPress deployment</span></a><span class="pricing-table-descript"> with hosting that&#x27;s twice the performance of our nearest competitor.</span>
+      </div>
     </div>
     <div class="row sticky">
       <div class="content-parent">
@@ -116,25 +130,31 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               </div>
               <div class="plan-description monthly-price">Try Jraft free — forever. Create your dream publication today.</div>
               <div class="plan-description">Start publishing for free, then add a plan to connect a custom domain.</div>
-            </div><a href="#Footer-CTA" class="button square-corners blackbg pricing-description w-button">Signup Free<br></a></div>
+            </div>
+            <a href="#Footer-CTA" class="button square-corners blackbg pricing-description w-button">Signup Free<br></a>
+          </div>
           <div class="cell-div pricing-details">
             <div class="table-plan-content-parent-squared">
               <div class="div-block-1329">
-                <div class="pricing-price">$14.90</div>
+                <div class="pricing-price">$6.90</div>
                 <div class="price-m">USD/user</div>
               </div>
-              <div class="plan-description monthly-price">per month, paid annually, or $21 paid monthly</div>
+              <div class="plan-description monthly-price">per month, paid annually, or $8.50 paid monthly</div>
               <div class="plan-description">Best for a small blog that doesn&#x27;t need advanced features.</div>
-            </div><a href="#Footer-CTA" class="button square-corners whitebg pricing w-button">Select Plan<br></a></div>
+            </div>
+            <a href="#Footer-CTA" class="button square-corners whitebg pricing w-button">Select Plan<br></a>
+          </div>
           <div class="cell-div pricing-details">
             <div class="table-plan-content-parent-squared">
               <div class="div-block-1329">
-                <div class="pricing-price">$33.90</div>
+                <div class="pricing-price">$16.90</div>
                 <div class="price-m">USD/user</div>
               </div>
-              <div class="plan-description monthly-price">per month, paid annually, or $48 paid monthly</div>
+              <div class="plan-description monthly-price">per month, paid annually, or $20.50 paid monthly</div>
               <div class="plan-description">For larger, multi site publications or those seeking advanced features</div>
-            </div><a href="#Footer-CTA" class="button square-corners whitebg pricing w-button">Select Plan<br></a></div>
+            </div>
+            <a href="#Footer-CTA" class="button square-corners whitebg pricing w-button">Select Plan<br></a>
+          </div>
         </div>
       </div>
       <div class="line"></div>
@@ -378,21 +398,27 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="cell-div ticks"><img src="images/Tick.svg" loading="lazy" alt="" class="tick"></div>
         </div>
       </div>
-    </div><a href="#Footer-CTA" class="button square-corners blackbg pricing w-button">Sign up free</a></div>
+    </div>
+    <a href="#Footer-CTA" class="button square-corners blackbg pricing w-button">Sign up free</a>
+  </div>
   <div class="div-block-1339">
     <div class="pre-cta _1">
       <div class="div-block-1335">
         <h3 class="pre-cta-title">Students and Non-Profits</h3>
         <div class="pre-cta-content">For student publications and nonprofits, Jraft offers unlimited seats on our Plus plan for just $14/month, <strong>so a ~99% discount</strong>.<br></div>
       </div>
-      <div class="button-parent"><a href="mailto:hello@tryjraft.com?subject=Student%20Discount" class="button square-corners w-button">Contact Us<br></a></div>
+      <div class="button-parent">
+        <a href="mailto:hello@tryjraft.com?subject=Student%20Discount" class="button square-corners w-button">Contact Us<br></a>
+      </div>
     </div>
     <div class="pre-cta _2">
       <div class="div-block-1335">
         <h3 class="pre-cta-title">Jraft for Enterprise</h3>
         <div class="pre-cta-content">Need multi-publication support on a single plan, custom ad solutions or features, assisted migration, and enterprise-grade scalability, security &amp; support? Jraft Enterprise provides it all.</div>
       </div>
-      <div class="button-parent"><a href="mailto:enterprise@tryjraft.com?subject=Jraft%20for%20Enterprise" class="button square-corners w-button">Contact Sales</a></div>
+      <div class="button-parent">
+        <a href="mailto:enterprise@tryjraft.com?subject=Jraft%20for%20Enterprise" class="button square-corners w-button">Contact Sales</a>
+      </div>
     </div>
   </div>
   <div class="pricing-more">
@@ -507,14 +533,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="pre-footer-parent">
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a533f" class="hosting-pricing-parent">
         <div>
-          <h2 class="heading-12">The price of a WordPress plugin</h2>
+          <h2 class="heading-12">Half the price of a WordPress plugin</h2>
           <div class="cta-pricing-description">Build your publication for free and take as long as you need (no trial period, no credit card details required). Just add a plan for a custom domain and to add more users when you&#x27;re ready to start publishing.</div>
-        </div><a href="pricing" aria-current="page" class="button square-corners left-align w-button w--current">View pricing</a></div>
+        </div>
+        <a href="pricing" aria-current="page" class="button square-corners left-align w-button w--current">View pricing</a>
+        <link rel="prefetch" href="/pricing">
+      </div>
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent landing">
         <div class="footer-form-title-copy">Get access before everyone else. <span class="text-span-9"><br>Sign up to our beta</span></div>
         <div class="w-form">
           <form id="wf-form-Email-Form" name="wf-form-Email-Form" data-name="Email Form" action="https://tryjraft.us4.list-manage.com/subscribe/post?u=6b8b0d1bda6854f0753acc077&amp;amp;id=45ffacf339" method="post" class="footer-form">
-            <div class="form-name-parent"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First Name" id="FNAME" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last Name" id="LNAME" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email" id="EMAIL-2" required=""><input type="submit" value="Join Beta Waitlist" data-wait="Please wait..." class="footer-form-input-submit w-button"></form>
+            <div class="form-name-parent"><input type="text" class="footer-form-input first-name w-input" maxlength="256" name="FNAME" data-name="FNAME" placeholder="First Name" id="FNAME" required=""><input type="text" class="footer-form-input last-name w-input" maxlength="256" name="LNAME" data-name="LNAME" placeholder="Last Name" id="LNAME" required=""></div><input type="email" class="footer-form-input w-input" maxlength="256" name="EMAIL" data-name="EMAIL" placeholder="Email" id="EMAIL-2" required=""><input type="submit" value="Join Beta Waitlist" data-wait="Please wait..." class="footer-form-input-submit w-button">
+          </form>
           <div class="success-message w-form-done">
             <div class="text-block-2">Thanks for believing in what we&#x27;re doing. You&#x27;ll be the first to know when we launch 🎉</div>
           </div>
@@ -528,37 +558,71 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <footer class="footer-section footer">
     <div class="footer-flex-container">
       <div class="div-block-1402">
-        <div class="footer-logo-contact-div"><a href="#" class="footer-logo-link w-inline-block"><img src="images/logo-white.svg" alt="Jraft&#x27;s Logo coloured white" class="footer-logo-image"></a>
+        <div class="footer-logo-contact-div">
+          <a href="#" class="footer-logo-link w-inline-block"><img src="images/logo-white.svg" alt="Jraft&#x27;s Logo coloured white" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
-          <div class="div-block-3"><a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a><a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a><a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a><a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="LinkedIn Logo" class="image-68"></a></div>
+          <div class="div-block-3">
+            <a href="mailto:hello@tryjraft.com?subject=Hello%20Jraft%20Team!" class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a>
+            <a href="https://www.facebook.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/facebook.svg" loading="lazy" alt="Facebook Logo"></a>
+            <a href="https://www.twitter.com/TryJraft" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/twitter.svg" loading="lazy" alt="Twitter Logo"></a>
+            <a href="https://www.linkedin.com/company/19119329/" target="_blank" class="footer-contact-buttons w-inline-block"><img src="images/LinkedIn-Logo.svg" loading="lazy" alt="LinkedIn Logo" class="image-68"></a>
+          </div>
         </div>
         <div class="footer-div">
           <h5 class="footer-list-heading">Product</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="manage" class="footer-text">Workflow</a></li>
-            <li><a href="create" class="footer-text">Editor</a></li>
-            <li><a href="build" class="footer-text">Builder</a></li>
-            <li><a href="engage" class="footer-text">Engage &amp; Earn</a></li>
-            <li><a href="hosting" class="footer-text">Hosting &amp; Performance</a></li>
-            <li><a href="pricing" aria-current="page" class="footer-text w--current">Pricing</a></li>
+            <li>
+              <a href="manage" class="footer-text">Workflow</a>
+            </li>
+            <li>
+              <a href="create" class="footer-text">Editor</a>
+            </li>
+            <li>
+              <a href="build" class="footer-text">Builder</a>
+            </li>
+            <li>
+              <a href="engage" class="footer-text">Engage &amp; Earn</a>
+            </li>
+            <li>
+              <a href="hosting" class="footer-text">Hosting &amp; Performance</a>
+            </li>
+            <li>
+              <a href="pricing" aria-current="page" class="footer-text w--current">Pricing</a>
+            </li>
           </ul>
         </div>
         <div class="footer-div hidden">
           <h5 class="footer-list-heading">Resources</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="#" class="footer-text">About Us</a></li>
-            <li><a href="#" class="footer-text">Press</a></li>
-            <li><a href="#" class="footer-text">Partner Program</a></li>
-            <li><a href="#" class="footer-text">Cookie Policy</a></li>
+            <li>
+              <a href="#" class="footer-text">About Us</a>
+            </li>
+            <li>
+              <a href="#" class="footer-text">Press</a>
+            </li>
+            <li>
+              <a href="#" class="footer-text">Partner Program</a>
+            </li>
+            <li>
+              <a href="#" class="footer-text">Cookie Policy</a>
+            </li>
           </ul>
         </div>
         <div class="footer-div">
           <h5 class="footer-list-heading">Compare</h5>
           <ul role="list" class="w-list-unstyled">
-            <li><a href="vs/wordpress" class="footer-text">WordPress</a></li>
-            <li><a href="vs/wix" class="footer-text">Wix</a></li>
-            <li><a href="vs/medium" class="footer-text">Medium</a></li>
-            <li><a href="vs/wordpress" class="footer-text">WordPress: Hidden Costs</a></li>
+            <li>
+              <a href="vs/wordpress" class="footer-text">WordPress</a>
+            </li>
+            <li>
+              <a href="vs/wix" class="footer-text">Wix</a>
+            </li>
+            <li>
+              <a href="vs/medium" class="footer-text">Medium</a>
+            </li>
+            <li>
+              <a href="vs/wordpress" class="footer-text">WordPress: Hidden Costs</a>
+            </li>
           </ul>
         </div>
       </div>
